feat: json2sprite package to include reverse conversion functionality from png to json
- Removed IMPLEMENTATION_SUMMARY.md as it is no longer needed.
- Updated MANIFEST.in to include EXAMPLES.md and CHANGELOG.md.
- Modified pyproject.toml to adjust pylint configuration.
- Enhanced __init__.py to export new reverse functions.
- Expanded CLI to support reverse conversion from PNG to JSON.
- Added reverse.py for handling PNG to JSON conversion logic.
- Created comprehensive tests for reverse functionality in test_reverse.py.
- Updated existing tests to include new features

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include README.md
 include LICENSE.md
+include EXAMPLES.md
+include CHANGELOG.md
 include requirements.txt
 recursive-include tests *.py
 recursive-include input *.json
